# docs/swagger.json
@@ -51,23 +51,12 @@
                 "summary": "Create a book",
                 "parameters": [
                     {
-                        "example": "Panoli",
-                        "description": "Book name",
-                        "name": "name",
+                        "description": "Book",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "example": "Pepito grillo",
-                        "description": "Date of the publication of the book",
-                        "name": "publish_date",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/book.CreateBookRequest"
                         }
                     }
                 ],
@@ -96,6 +85,32 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "publish_date": {
+                    "type": "string"
+                }
+            }
+        },
+        "book.CreateBookRequest": {
+            "type": "object",
+            "required": [
+                "categories",
+                "description",
+                "name",
+                "publish_date"
+            ],
+            "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "description": {
                     "type": "string"
                 },
                 "name": {
